--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,155 +15,12 @@ env:
   LOCALGOV_DRUPAL_PROJECT_PATH: web/themes/custom/pcc
 
 jobs:
-  build:
-    name: Install LocalGov Drupal
+  test:
     runs-on: ubuntu-latest
-    env:
-      COMPOSER_EXIT_ON_PATCH_FAILURE: '1'
-
-    strategy:
-      fail-fast: false
-      matrix:
-        localgov-version:
-          - '3.x'
-        drupal-version:
-          - '~10.0'
-        php-version:
-          - '8.1'
-          - '8.2'
-          - '8.3'
-
     steps:
-      - name: Cached workspace
-        uses: actions/cache@v4
-        with:
-          path: ./html
-          key: localgov-build-${{ matrix.localgov-version }}-${{ matrix.drupal-version }}-${{ matrix.php-version }}-${{ github.run_id }}-${{ secrets.CACHE_VERSION }}
+      - uses: actions/checkout@v5
+      - name: Setup DDEV
+        uses: ddev/github-action-setup-ddev@v1
 
-      - name: Check out project
-        uses: actions/checkout@v4
-        with:
-          path: html
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php-version }}
-
-      - name: Validate composer.json and composer.lock
-        run: |
-          cd html
-          composer validate --strict
-            
-      - name: Install dependencies
-        run: |
-          cd html
-          composer install --prefer-dist --no-progress --no-suggest
-
-  phpcs:
-    name: Coding standards checks
-    needs: build
-    runs-on: ubuntu-latest
-
-    strategy:
-      fail-fast: false
-      matrix:
-        localgov-version:
-          - '3.x'
-        drupal-version:
-          - '~10.0'
-        php-version:
-          - '8.3'
-
-    steps:
-      - name: Cached workspace
-        uses: actions/cache@v4
-        with:
-          path: ./html
-          key: localgov-build-${{ matrix.localgov-version }}-${{ matrix.drupal-version }}-${{ matrix.php-version }}-${{ github.run_id }}-${{ secrets.CACHE_VERSION }}
-          restore-keys: |
-            localgov-build-${{ matrix.localgov-version }}-${{ matrix.drupal-version }}-${{ matrix.php-version }}-
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php-version }}
-
-      - name: Run coding standards checks
-        run: |
-          cd html
-          ./bin/phpcs -p ${LOCALGOV_DRUPAL_PROJECT_PATH}
-
-  phpstan:
-    name: Static analysis checks
-    needs: build
-    runs-on: ubuntu-latest
-
-    strategy:
-      fail-fast: false
-      matrix:
-        localgov-version:
-          - '3.x'
-        drupal-version:
-          - '~10.0'
-        php-version:
-          - '8.3'
-
-    steps:
-      - name: Cached workspace
-        uses: actions/cache@v4
-        with:
-          path: ./html
-          key: localgov-build-${{ matrix.localgov-version }}-${{ matrix.drupal-version }}-${{ matrix.php-version }}-${{ github.run_id }}-${{ secrets.CACHE_VERSION }}
-          restore-keys: |
-            localgov-build-${{ matrix.localgov-version }}-${{ matrix.drupal-version }}-${{ matrix.php-version }}-
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php-version }}
-
-      - name: Run PHPStan code checks
-        run: |
-          cd html
-          ./bin/phpstan analyse -c ./phpstan.neon ./web/modules/contrib/localgov* ./web/profiles/contrib/localgov* ./web/themes/contrib/localgov*
-  phpunit:
-    name: PHPUnit tests
-    needs: build
-    runs-on: ubuntu-latest
-
-    strategy:
-      fail-fast: false
-      matrix:
-        localgov-version:
-          - '3.x'
-        drupal-version:
-          - '~10.0'
-        php-version:
-          - '8.1'
-          - '8.2'
-          - '8.3'
-
-    steps:
-      - name: Clone Drupal container
-        uses: actions/checkout@v4
-        with:
-          repository: localgovdrupal/drupal-container
-          ref: php${{ matrix.php-version }}
-
-      - name: Cached workspace
-        uses: actions/cache@v4
-        with:
-          path: ./html
-          key: localgov-build-${{ matrix.localgov-version }}-${{ matrix.drupal-version }}-${{ matrix.php-version }}-${{ github.run_id }}-${{ secrets.CACHE_VERSION }}
-          restore-keys: |
-            localgov-build-${{ matrix.localgov-version }}-${{ matrix.drupal-version }}-${{ matrix.php-version }}-
-
-      - name: Start Docker environment
-        run: docker compose -f docker-compose.yml up -d
-
-      - name: Run PHPUnit tests
-        run: |
-          mkdir -p ./html/web/sites/simpletest && chmod 777 ./html/web/sites/simpletest
-          docker exec -t drupal bash -c 'chown docker:docker -R /var/www/html'
-          docker exec -u docker -t drupal bash -c "cd /var/www/html && ./bin/paratest --processes=4"
+      # example: composer install
+      - run: ddev composer install
