--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -11,7 +11,11 @@ module:
   book: 0
   breakpoint: 0
   charts: 0
+  charts_billboard: 0
+  charts_c3: 0
   charts_chartjs: 0
+  charts_google: 0
+  charts_highcharts: 0
   ckeditor5: 0
   condition_field: 0
   config: 0
